second round improved

--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "kubo-rpc-client": "^4.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.1",
     "web3": "^1.8.2"
   },
   "devDependencies": {
